Fixed Overflow in CSS

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -399,6 +399,6 @@ footer {
     top: 0;
     left: 0;
     min-height: 100vh;
-    max-width: 100vw;
+    max-width: 100%;
     z-index: -10;
 }
